feat: useMessage hook for message creation

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,5 @@
 @import './base/variables';
 @import './base/layout';
-
 @import './layout/navbar';
-
-@import './pages/by-item'
+@import './pages/products';
+@import './components/message';
