--- a/src/scss/pages/_products.scss
+++ b/src/scss/pages/_products.scss
@@ -1,4 +1,4 @@
-.By-item {
+.Products {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -18,7 +18,7 @@
         justify-content: center;
         position: relative;
 
-        &__new-item-button {
+        &__new-product-button {
             position: absolute !important;
             right: 0 !important;
         }
