feat: purchases by store page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,4 +2,5 @@
 @import './base/layout';
 @import './layout/navbar';
 @import './pages/products';
+@import './pages/stores';
 @import './components/message';
