--- a/src/scss/pages/_products.scss
+++ b/src/scss/pages/_products.scss
@@ -6,10 +6,10 @@
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
-    row-gap: 25px;
+    row-gap: 10px;
     padding: 25px;
+
 
     &__toolbar {
         display: flex;
@@ -21,6 +21,10 @@
         &__new-product-button {
             position: absolute !important;
             right: 0 !important;
+        }
+        &__search-button {
+            position: absolute !important;
+            left: 0 !important;
         }
 
         &__tab-list {
@@ -51,6 +55,8 @@
                 font-weight: 800;
             }
         }
+    }
+    &__collapse {
     }
     .grid {
         display: flex;
