--- a/src/scss/components/_currency.scss
+++ b/src/scss/components/_currency.scss
@@ -1,5 +1,10 @@
 .Currency {
     width: 200px;
+
+    @include respond(reactstrap-sm) {
+        width: 100%;
+    }
+
     * {
         color: black;
     }
