--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -1,15 +1,22 @@
-.Navbar {
-    width: 100vw;
+.navbar {
     background-color: #11468F;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    
+
+    &__container {
+        width: 100%;
+    }
+    .container-fluid {
+        padding: 0;
+    }
+    &-collapse {
+        padding: 0 10px;
+    }
     &__routes {
         display: flex;
         column-gap: 10px;
+
+        @include respond(reactstrap-sm) {
+            margin-bottom: 30px;
+        }
 
         &__route {
             color: white;
@@ -18,6 +25,14 @@
             border-radius: 5px;
             transition: background-color 0.2s;
             position: relative;
+            
+            @include respond(reactstrap-sm) {
+                text-align: center;
+                font-size: 1.5rem;
+                padding: 10px !important;
+                border-radius: 0;
+                border-bottom: 4px solid #041562;
+            }
 
             &:hover {
                 background-color: rgba(255, 255, 255, 0.15);
@@ -31,6 +46,10 @@
                 height: 1px;
                 bottom: 0;
                 left: 10px;
+
+                @include respond(reactstrap-sm) {
+                    content: none;
+                }
             }
         }
     }
