--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import './base/variables';
+@import './abstract/mixins';
 @import './base/layout';
 @import './layout/navbar';
 @import './pages/products';
