--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,2 +1,6 @@
 $primary-blue: #11468F;
-$primary-background: #EEEEEE
+$primary-background: #EEEEEE;
+
+$dark: rgb(40, 40, 40);
+$darker: rgb(25, 25, 25);
+$dark-border: rgb(80, 80, 80);
