--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 html, body, #root {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
 
     * {
-        transition: color 0.3s, background-color 0.3s, border-color 0.3s;
+        font-family: 'Lato', sans-serif;
     }
 }
 .App {
