--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -53,4 +53,16 @@
             }
         }
     }
+    .dark-mode-toggle {
+        @include respond(reactstrap-sm) {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+
+            svg {
+                width: 30px;
+                height: 30px;
+            }
+        }
+    }
 }
