feat: add loading screen

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,5 +6,6 @@
 @import './pages/stores';
 @import './components/message';
 @import './components/currency';
+@import './components/loading';
 
 @import './themes/dark-mode';
